--- a/Quarkly.html
+++ b/Quarkly.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <h1>Future Quantum Computing</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -18,11 +19,9 @@
     </header>
     <main>
         <article>
-            <h1>Welcome to Quarkly</h1>
+            <h2>Welcome to Quarkly</h2>
             <p>Embark on an exciting journey into the realm of Quantum Science and Technology with us! At Quarkly Web, we're passionate about exploring the intricate and groundbreaking world of quantum phenomena that are revolutionizing the future.
-                Whether you're a curious newcomer or a seasoned professional, our platform offers a wealth of resources, insightful articles, and vibrant discussions tailored to all levels of interest. From the principles of quantum mechanics to the latest advancements in quantum computing and cryptography, we cover a wide spectrum of topics to enlighten and inspire.
-         
-                Join our community and delve into the quantum universe where theory meets application, and imagination meets innovation. Welcome to Quarkly Web—your gateway to the cutting-edge world of Quantum Science and Technology!.</p>
+                Whether you're a curious newcomer or a seasoned professional, our platform offers a wealth of resources, insightful articles, and vibrant discussions tailored to all levels of interest. From the principles of quantum mechanics to the latest advancements in quantum computing and cryptography, we cover a wide spectrum of topics to enlighten and inspire.</p>
             <button id="read-more">Read More</button>
             <div id="more-content" style="display: none;">
                 <p>  </p>
@@ -30,7 +29,7 @@
             </div>
         </article>
         <aside>
-            <img src="photo-Fathan Akbar.jpeg" alt="Profile Picture">
+            <img src="photo-Fathan Akbar.jpeg" alt="Profile Picture Fathan Akbar">
             <h2>About Me</h2>
             <p>I am Fathan Akbar Nur Habibi, I have an Engineering Physics background. I have interests in Semiconductor, Software Engineering, Embedded System, AL / Machine Learning and Quantum Science.</p>
         </aside>
