--- a/Quarkly.html
+++ b/Quarkly.html
@@ -8,35 +8,55 @@
 </head>
 <body>
     <header>
-        <h1>Future Quantum Computing</h1>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
+        <h1>Welcome To Quarkly</h1>
     </header>
     <main>
         <article>
-            <h2>Welcome to Quarkly</h2>
-            <p>Embark on an exciting journey into the realm of Quantum Science and Technology with us! At Quarkly Web, we're passionate about exploring the intricate and groundbreaking world of quantum phenomena that are revolutionizing the future.
-                Whether you're a curious newcomer or a seasoned professional, our platform offers a wealth of resources, insightful articles, and vibrant discussions tailored to all levels of interest. From the principles of quantum mechanics to the latest advancements in quantum computing and cryptography, we cover a wide spectrum of topics to enlighten and inspire.</p>
-            <button id="read-more">Read More</button>
-            <div id="more-content" style="display: none;">
-                <p>  </p>
-                <p>  </p>
-            </div>
+            <p> Embark on an exciting journey into the realm of Quantum Science and Technology with us! At Quarkly Web, we're passionate about exploring the intricate and groundbreaking world of quantum phenomena that are revolutionizing the future.
+                Whether you're a curious newcomer or a seasoned professional, our platform offers a wealth of resources, insightful articles, and vibrant discussions tailored to all levels of interest. From the principles of quantum mechanics to the latest advancements in quantum computing and cryptography, we cover a wide spectrum of topics to enlighten and inspire. </p>
+            <h2>What is Quantum Computing?</h2>
+            <p>Quantum computing utilizes quantum bits or qubits as the basic unit of information, contrasting with classical bits that can only exist as either 0 or 1. A qubit can exist in a state of superposition, meaning it can represent both 0 and 1 simultaneously. This property allows quantum computers to perform multiple calculations at once, exponentially increasing their processing power as more qubits are added.</p>
+            <p>Key principles of quantum computing include:
+               <p> (1) Superposition: Qubits can be in multiple states at once, enabling complex computations that would be infeasible for classical computers.</p>
+               <p> (2) Entanglement : Qubits can become entangled, meaning the state of one qubit can depend on the state of another, regardless of distance. This interdependence allows for coordinated operations that enhance computational efficiency.</p>
+               <p> (3) Decoherence  : A significant challenge in quantum computing, decoherence occurs when qubits lose their quantum state due to interactions with the environment, introducing errors in calculations.</p>
+    </header>
+    <main>
+        <article>
+        <h2>Applied Technology Using Quantum Computing</h2>
+            <p>Quantum computing has promising applications across various fields: </p>
+            <p> (1) Cryptography: Quantum computers could potentially break existing encryption methods, leading to the development of quantum-resistant algorithms. Shor's algorithm, for example, demonstrates how quantum computers can factor large numbers exponentially faster than classical computers, threatening current cryptographic systems.</p>
+            <p> (2) Drug Discovery and Healthcare: Quantum computing can simulate molecular interactions at unprecedented speeds, aiding in drug discovery and personalized medicine by predicting how different compounds will interact with biological systems.</p>
+            <p> (3) Optimization Problems: Industries such as logistics and finance can benefit from quantum algorithms that solve complex optimization problems more efficiently than classical methods, potentially leading to significant cost savings and improved decision-making processes.</p>
+            
+    </header>
+    <main>
+        <article>
+        <h2>Future of Quantum Computing </h2>
+            <p>The future of quantum computing is both exciting and difficult. While significant advancements have been made, practical, large-scale quantum computers remain largely experimental. Current research focuses on overcoming obstacles such as:</p>
+            <p> (1) Scalability: Developing qubits that can maintain coherence over longer periods and can be scaled up to create more powerful quantum systems is essential for practical applications.</p>
+            <p> (2) Error Correction: Quantum error correction methods are crucial to ensure reliable computations, as decoherence can introduce significant errors in quantum calculations.</p>
+            <p> (3) Commercialization: Major tech companies, including IBM, Google, and Microsoft, are investing heavily in quantum computing research, aiming to develop commercially viable quantum computers that can outperform classical systems in specific tasks within the next decade.</p>
+
+            <p> As research progresses, quantum computing has the potential to transform fields ranging from cryptography to artificial intelligence, promising a future where complex problems can be solved in ways that were previously unimaginable.</p>
+>
         </article>
         <aside>
-            <img src="photo-Fathan Akbar.jpeg" alt="Profile Picture Fathan Akbar">
-            <h2>About Me</h2>
+            <img src="photo-Fathan Akbar.jpg" alt="Profile Picture">
+            <h3>About the Author</h3>
             <p>I am Fathan Akbar Nur Habibi, I have an Engineering Physics background. I have interests in Semiconductor, Software Engineering, Embedded System, AL / Machine Learning and Quantum Science.</p>
         </aside>
     </main>
     <footer>
         <p>&copy; 2024 Quarkly</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
